Update hero titles in English and Indonesian language files to include multiple options.

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,7 +6,23 @@
     "navProcess": "Process",
     "navAiStrategy": "Strategy Planner",
     "navContact": "Contact",
-    "heroTitle": "Connecting Your Digital Opportunities.",
+    "heroTitles": [
+        "Connecting Your Digital Opportunities.",
+        "Building Intelligent Digital Bridges.",
+        "Innovating Leading Telco Services.",
+        "Digital Solutions for Your Future.",
+        "Empowering Digital Transformation.",
+        "Technology for Seamless Connectivity.",
+        "The Future Begins with Your Connection.",
+        "Delivering a New Era of Telecommunications.",
+        "Smart Connectivity for the Modern World.",
+        "Enhancing Your Digital Potential.",
+        "Networks That Connect Your World.",
+        "Innovation Shaping the Digital Future.",
+        "Fast Connections, Smart Solutions.",
+        "Building the Future with Technology.",
+        "Connecting You to the Digital World."
+    ],
     "heroSubtitle": "We develop innovative telco applications and services, connecting your business with millions of customers across Indonesia.",
     "heroBtnPrimary": "Request a Consultation",
     "heroBtnSecondary": "View Our Services",
