--- a/lang/id.json
+++ b/lang/id.json
@@ -6,7 +6,23 @@
     "navProcess": "Proses",
     "navAiStrategy": "Perencana Strategi",
     "navContact": "Kontak",
-    "heroTitle": "Menghubungkan Peluang Digital Anda.",
+    "heroTitles": [
+        "Menghubungkan Peluang Digital Anda.",
+        "Membangun Jembatan Digital Cerdas.",
+        "Inovasi Layanan Telekomunikasi Terdepan.",
+        "Solusi Digital untuk Masa Depan Anda.",
+        "Transformasi Digital yang Memberdayakan.",
+        "Teknologi untuk Konektivitas Tanpa Batas.",
+        "Masa Depan Dimulai dengan Koneksi Anda.",
+        "Menghadirkan Era Baru Telekomunikasi.",
+        "Konektivitas Pintar untuk Dunia Modern.",
+        "Meningkatkan Potensi Digital Anda.",
+        "Jaringan yang Menghubungkan Dunia Anda.",
+        "Inovasi yang Membentuk Masa Depan Digital.",
+        "Koneksi Cepat, Solusi Cerdas.",
+        "Membangun Masa Depan dengan Teknologi.",
+        "Menghubungkan Anda ke Dunia Digital."
+    ],
     "heroSubtitle": "Kami mengembangkan aplikasi dan layanan telco yang inovatif, menghubungkan bisnis Anda dengan jutaan pelanggan di seluruh Indonesia.",
     "heroBtnPrimary": "Minta Konsultasi",
     "heroBtnSecondary": "Lihat Layanan Kami",
